@@ -35,6 +35,7 @@ sourceSets {
 
 def cabiLibPath = "${rootProject.projectDir}/../conduit/build/libconduit_cabi.so"
 def commonJvmArgs = [
+    '--enable-preview',
     '--enable-native-access=ALL-UNNAMED',
     "-Dconduit.cabi.path=${cabiLibPath}",
     "-Djava.library.path=${rootProject.projectDir}/../conduit/build"
